[gd_scene load_steps=12 format=3 uid="uid://bv54uxh4q22w3"]

[ext_resource type="Script" path="res://Scenes/Main/Main.gd" id="1_4c5xp"]
[ext_resource type="PackedScene" uid="uid://d7eioflr8o8u" path="res://Scenes/Slime/slime.tscn" id="2_ceuqj"]
[ext_resource type="PackedScene" uid="uid://bybp2uxhsjre3" path="res://Scenes/Player/Player.tscn" id="3_jjuk5"]
[ext_resource type="PackedScene" uid="uid://cmmdjyblrm2jv" path="res://Scenes/HUD/hud.tscn" id="4_5j824"]
[ext_resource type="Texture2D" uid="uid://bhkul8bgjxjkx" path="res://Assets/background-1.png_1.png" id="5_dp6e2"]
[ext_resource type="AudioStream" uid="uid://oaeisit0128" path="res://Assets/lancer-splat-made-with-Voicemod-technology.mp3" id="6_404tp"]
[ext_resource type="AudioStream" uid="uid://bkpd7pwswdhtj" path="res://Assets/congratulations-you-won.mp3" id="7_c0k2s"]
[ext_resource type="AudioStream" uid="uid://gu42f3qf2h3j" path="res://Assets/go_3.mp3" id="8_n5lux"]
[ext_resource type="AudioStream" uid="uid://ccupeh1hv0afm" path="res://Assets/Bonus Level (Unreleased Version) - Plok.mp3" id="9_1h4we"]
[ext_resource type="AudioStream" uid="uid://bodty66g73gsf" path="res://Assets/ohhh.mp3" id="10_foo0q"]

[sub_resource type="Curve2D" id="Curve2D_vj5kf"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_4c5xp")
slime_scene = ExtResource("2_ceuqj")

[node name="Player" parent="." instance=ExtResource("3_jjuk5")]
priority = 1

[node name="SlimeTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]
process_callback = 0

[node name="StartTimer" type="Timer" parent="."]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(640, 360)

[node name="SlimePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_vj5kf")

[node name="SlimeSpawnLocation" type="PathFollow2D" parent="SlimePath"]

[node name="HUD" parent="." instance=ExtResource("4_5j824")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("5_dp6e2")

[node name="Splat" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_404tp")
volume_db = 1.0
pitch_scale = 1.5

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_c0k2s")

[node name="Go" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_n5lux")

[node name="Song" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_1h4we")

[node name="LevelUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_foo0q")
volume_db = 10.0

[connection signal="hit" from="Player" to="." method="on_hit"]
[connection signal="timeout" from="SlimeTimer" to="." method="_on_slime_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_countdown"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
